test/type/fail/not_unary_wrong.j
class A{
  Void main() {
    return !(0);
  }
}
